--- a/index.html
+++ b/index.html
@@ -66,12 +66,13 @@
           <h2 class='section__title'>⚡ Acerca de Mí</h2> 
           <div class='about__content'>
             <div class='about__info'>
-              <p>Lorem <a href="https://www.academlo.com/" target="_blank"><strong>Academlo</strong></a> ipsum dolor sit, consectetu adipisicing elit. Est quis hic assumenda ex eius dolore vel tenetur aliquam dolores ipsam! Nam ab ipsam quaerat reprehenderit natus unde expedita! Optio, ullam.</p>
+              <p>Actualmente soy estudiante de <a href="https://www.academlo.com/" target="_blank"><strong>Academlo</strong></a> con toda la motivacion y actitud de aprender ese arte del desarrollo Web y asi mismo lograr adquirir muchos conocimientos que me permitan desarrollarme no solo en mi area profesional si no 
+                tambien en mi area personal.</p>
 
               <p>Lorem dolor, sit amet consectetur adipisicing elit. Provident non dignissimos deleniti saepe modi quod repellat, maxime amet vero animi, <a href='#'>aliquid magni</a> commodi architecto, ducimus molestias itaque nemo <a href='#'>quam laborum</a>.</p>
             </div>
             <div class='about__image'>
-              <img src='assets/img/silueta.avif' alt='' class="about__img">
+              <img src='assets/img/profile_dev.jpg' alt='' class="about__img">
             </div>
           </div>
         </div>
@@ -213,7 +214,7 @@
                   </span>
                 </div>
               </div>
-            </div>
+            </div>  
           </div>
         </div>
       </section>
