--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
           <li class="nav__item">
             <a href='#contact' class="nav__link">Contacto</a>
           </li>
+          <li class="nav__switch">
+            <i class="bx bxs-sun"></i>
+            <i class="bx bxs-moon"></i>
+          </li>
         </ul>
+        
       </div>
 
       <button type="button" class="btn btn--open" aria-label="abrir">
@@ -60,7 +65,7 @@
       <div class='container'>
         <div class='hero__content'>
           <div>
-            <h1 class='hero__title'>👋🏻 ¡Hola!, soy...<br>
+            <h1 class='hero__title'> ¡Hola!, soy...<br>
               <span class="hero__name">Sergio Jurado</span>
             </h1>
             <p class='hero__description'>
@@ -69,6 +74,9 @@
               </span>
               <br> Un desarrollador autodidacta.
             </p>
+            <span class="hero__cv">
+              <a download="Descarga CV" href="./assets/img/Cv_SergioJurado.pdf">Descargar CV</a>
+            </span>
           </div>
         </div>
       </div>
@@ -80,11 +88,11 @@
         <div class='about__content'>
           <div class='about__info'>
             <p>Soy un Desarrollador Frontend, enfocando mi trabajo en un estilo personal, profesional e interesante para
-              el publico.
+              el público.
             </p>
             <p>
               Disfruto de mi trabajo ya que encuentro en éste la manera de plasmar mi conocimiento y me desafia a
-              capacitarme en esta era digital que es tan cambiante dia a dia.
+              capacitarme en ésta era digital que es tan cambiante día a día.
             </p>
           </div>
           <div class='about__image'>
@@ -169,6 +177,22 @@
             <span class="card__text">Productividad</span>
           </div>
 
+          <div class="skills__card">
+            <div class="img__card">
+              <img class="link" src="./assets/img/svg/nodejs.svg" alt="Slack">
+            </div>
+            <span class="card__title">Nodejs</span>
+            <span class="card__text">Ejecución</span>
+          </div>
+
+          <div class="skills__card">
+            <div class="img__card">
+              <img class="link" src="./assets/img/svg/postgres.svg" alt="Slack">
+            </div>
+            <span class="card__title">Postgres</span>
+            <span class="card__text">Bases de Datos</span>
+          </div>
+
         </div>
       </div>
     </section>
@@ -248,7 +272,7 @@
           <!--Card 3-->
           <div class='works__item'>
             <div class='works__image'>
-              <img src='assets/img/ecommmerce2.webp' alt='img app' class='works_img'>
+              <img src='assets/img/ecommerce3.jpg' alt='img app' class='works_img'>
             </div>
             <div class='works__body'>
               <div class="works__head">
@@ -280,8 +304,6 @@
         </div>
       </div>
     </section>
-
-
 
     <section id="contact" class="contacto">
       <div class='container'>
@@ -326,20 +348,17 @@
           </div>
         </div>
       </div>
-
-
-
     </section>
   </main>
 
   <footer class="footer">
     <div class='container'>
-      <p class="copy">🚀 Diseñado y desarrollado por Sergio Jurado.</p>
+      <p class="copy"> Diseñado y desarrollado por Sergio Jurado.</p>
     </div>
   </footer>
 
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-  <script src='assets/js/index.js'></script>
+  <script src='./assets/js/index.js'></script>
 </body>
 
 </html>
