--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
         <h2 class='section__title'> Acerca de Mí</h2>
         <div class='about__content'>
           <div class='about__info'>
-            <p>Soy un Desarrollador Frontend, enfocando mi trabajo en un estilo personal, profesional e interesante para
+            <p>Soy un Desarrollador FullStack, enfocando mi trabajo en un estilo personal, profesional e interesante para
               el público.
             </p>
             <p>
-              Disfruto de mi trabajo ya que encuentro en éste la manera de plasmar mi conocimiento y me desafia a
+              Disfruto de mi trabajo ya que encuentro en éste la manera de plasmar mi conocimiento y me desafía a
               capacitarme en ésta era digital que es tan cambiante día a día.
             </p>
           </div>
